compiling_error.txt
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/mainA.cpp:1:10: warning: non-portable path to file '"Graphics.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "graphics.h"
         ^~~~~~~~~~~~
         "Graphics.h"
1 warning generated.
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:22:17: error: no matching member function for call to 'distance'
  return Point::distance(this, b);
         ~~~~~~~^~~~~~~~
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.h:14:20: note: candidate function not viable: no known conversion from 'Point *' to 'Point' for 1st argument; dereference the argument with *
      static float distance(Point a, Point b);
                   ^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:21:14: note: candidate function not viable: requires single argument 'b', but 2 arguments were provided
float Point::distance(Point b) {
             ^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:26:10: error: value of type 'Point' is not contextually convertible to 'bool'
  if ( !(a && b) ) {
         ^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:26:12: error: invalid operands to binary expression ('Point' and 'Point')
  if ( !(a && b) ) {
         ~ ^  ~
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:27:52: error: expected ';' after expression
    std::cerr << "Error in distance, null input.\n"
                                                   ^
                                                   ;
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:27:10: error: no member named 'cerr' in namespace 'std'
    std::cerr << "Error in distance, null input.\n"
    ~~~~~^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:28:5: error: use of undeclared identifier 'exit'
    exit(-1);
    ^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:32:16: error: no matching function for call to 'pow'
  return sqrt( pow(dx) + pow(dy) );
               ^~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:968:1: note: candidate function template not viable: requires 2 arguments, but 1 was provided
pow(_A1 __lcpp_x, _A2 __lcpp_y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:957:46: note: candidate function not viable: requires 2 arguments, but 1 was provided
inline _LIBCPP_INLINE_VISIBILITY long double pow(long double __lcpp_x, long double __lcpp_y) _NOEXCEPT {return ::powl(__lcpp_x, __lcpp_y);}
                                             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:956:46: note: candidate function not viable: requires 2 arguments, but 1 was provided
inline _LIBCPP_INLINE_VISIBILITY float       pow(float __lcpp_x, float __lcpp_y) _NOEXCEPT             {return ::powf(__lcpp_x, __lcpp_y);}
                                             ^
/usr/include/math.h:443:15: note: candidate function not viable: requires 2 arguments, but 1 was provided
extern double pow(double, double);
              ^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/point.cpp:32:26: error: no matching function for call to 'pow'
  return sqrt( pow(dx) + pow(dy) );
                         ^~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:968:1: note: candidate function template not viable: requires 2 arguments, but 1 was provided
pow(_A1 __lcpp_x, _A2 __lcpp_y) _NOEXCEPT
^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:957:46: note: candidate function not viable: requires 2 arguments, but 1 was provided
inline _LIBCPP_INLINE_VISIBILITY long double pow(long double __lcpp_x, long double __lcpp_y) _NOEXCEPT {return ::powl(__lcpp_x, __lcpp_y);}
                                             ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/math.h:956:46: note: candidate function not viable: requires 2 arguments, but 1 was provided
inline _LIBCPP_INLINE_VISIBILITY float       pow(float __lcpp_x, float __lcpp_y) _NOEXCEPT             {return ::powf(__lcpp_x, __lcpp_y);}
                                             ^
/usr/include/math.h:443:15: note: candidate function not viable: requires 2 arguments, but 1 was provided
extern double pow(double, double);
              ^
8 errors generated.
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/rectangle.cpp:2:10: warning: non-portable path to file '"Graphics.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "graphics.h"
         ^~~~~~~~~~~~
         "Graphics.h"
1 warning generated.
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/shape.cpp:1:10: warning: non-portable path to file '"Graphics.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "graphics.h"
         ^~~~~~~~~~~~
         "Graphics.h"
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/shape.cpp:16:10: error: no member named 'cerr' in namespace 'std'
    std::cerr << "Memory not available...";
    ~~~~~^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/shape.cpp:17:10: error: no member named 'exit' in namespace 'std'
    std::exit(1);
    ~~~~~^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/shape.cpp:30:10: error: no member named 'cerr' in namespace 'std'
    std::cerr << "Memory not availible...";
    ~~~~~^
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/shape.cpp:31:10: error: no member named 'exit' in namespace 'std'
    std::exit(1);
    ~~~~~^
1 warning and 4 errors generated.
/Users/keenangaudio/Documents/School/ENSF480/ENSF480Lab2/square.cpp:1:10: warning: non-portable path to file '"Graphics.h"'; specified path differs in case from file name on disk [-Wnonportable-include-path]
#include "graphics.h"
         ^~~~~~~~~~~~
         "Graphics.h"
1 warning generated.
